[package]
name = "feed_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.24"
feed-rs = "1.3.0"
log = "0.4.17"
reqwest = "0.11.17"
simplelog = "0.12.1"
tokio = { version = "1.28.1", features = ["full"] }
url = "2.3.1"
