[package]
name = "feed_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
ctrlc = "3.2.5"
env_logger = "0.10.0"
feed-rs = "1.3.0"
git-version = "0.3.5"
log = "0.4.17"
rand = "0.8.5"
reqwest = "0.11.17"
serde = "1.0.163"
serde-jsonlines = "0.4.0"
tokio = { version = "1.28.1", features = ["full"] }
url = "2.3.1"
zstd = "0.12.3"
