[package]
name = "feed_fetcher"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
ctrlc = "3.5.0"
env_logger = "0.11.8"
feed-rs = "2.3.1"
git-version = "0.3.9"
log = "0.4.28"
mime = "0.3.17"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["gzip", "brotli"] }
serde = "1.0.228"
serde-jsonlines = "0.7.0"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
zstd = "0.13.3"
